--- a/projects/boxslider/angular/package.json
+++ b/projects/boxslider/angular/package.json
@@ -1,10 +1,18 @@
 {
   "name": "@boxslider/angular",
-  "version": "1.0.1",
+  "author": "Phil Parsons",
+  "version": "1.0.2",
+  "description": "Angular directives for BoxSlider",
+  "keywords": ["boxslider", "angular", "slider", "directive", "carousel", "cube", "3D"],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/boxslider/angular.git"
+  },
   "peerDependencies": {
     "@angular/common": "^9.1.7",
     "@angular/core": "^9.1.7",
     "@boxslider/slider": "^1.0.4",
     "tslib": "^1.10.0"
-  }
+  },
+  "license": "MIT"
 }
