--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start:demo": "ng serve",
     "build": "ng build",
     "build:boxslider": "ng build --project=@boxslider/angular --prod",
-    "test": "ng test",
+    "publish:boxslider": "npm publish ./dist/boxslider/angular --access=public",
+    "test": "ng test --browsers=ChromeHeadless --watch=false",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
@@ -21,7 +22,7 @@
     "@angular/platform-browser": "~9.1.7",
     "@angular/platform-browser-dynamic": "~9.1.7",
     "@angular/router": "~9.1.7",
-    "@boxslider/slider": "^1.0.4",
+    "@boxslider/slider": "^1.1.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
